added bio description

--- a/index.html
+++ b/index.html
@@ -43,10 +43,10 @@
         <img src="images/main.png" alt="Sandesh Parajuli">
     </div>
     <div class="home-text">
-        <span>Hello, I'm</span>
+        <span>👋 &lt;Hello/>, I'm</span>
         <h1>Sandesh Parajuli</h1>
         <h2>Software Engineer</h2>
-        <p>Lorem ipsum dolor sit amet cons <br> adipisicing elit. Minima, consectetur <br> ullam?</p>
+        <p>Goal-oriented, dedicated coding enthusiast with a passion for full-stack development, equipped with strong critical thinking skills and a quick learning ability.</p>
         <a href="#contact" class="btn">Contact Me</a>
     </div>
 </section>
